--- a/index.html
+++ b/index.html
@@ -8,5 +8,306 @@
 		<link rel="stylesheet" href="./recursos/css/style.css" />
 		<script src="./recursos/js/scripts.js" defer></script>
 	</head>
-	<body></body>
+	<body>
+		<!-- entrada -->
+		<header>
+			<h1>
+				<span translate="no">Jhon Cardona </span
+				><span id="desarrollador">desarrollador</span>
+			</h1>
+		</header>
+		<!-- Proyectos -->
+		<main>
+			<h2>Proyectos</h2>
+			<ul>
+				<li>
+					<h3>Portafolio Camila Agudelo</h3>
+					<div class="proyecto-display">
+						<img
+							src="./recursos/img/camila-agudelo-sitio-web.png"
+							alt="pagina principal Camila Agudelo"
+						/>
+						<a href="https://camilaagudelo.netlify.app/">Sitio web</a>
+						<h4>Lenguajes:</h4>
+						<svg
+							xmlns="http://www.w3.org/2000/svg"
+							class="
+								icono-javascript
+								icon icon-tabler icon-tabler-brand-javascript
+							"
+							width="48"
+							height="48"
+							viewBox="0 0 24 24"
+							stroke-width="1.5"
+							stroke="#2c3e50"
+							fill="none"
+							stroke-linecap="round"
+							stroke-linejoin="round"
+						>
+							<path stroke="none" d="M0 0h24v24H0z" fill="none" />
+							<path d="M20 4l-2 14.5l-6 2l-6 -2l-2 -14.5z" />
+							<path d="M7.5 8h3v8l-2 -1" />
+							<path
+								d="M16.5 8h-2.5a0.5 .5 0 0 0 -.5 .5v3a0.5 .5 0 0 0 .5 .5h1.423a0.5 .5 0 0 1 .495 .57l-.418 2.93l-2 .5"
+							/>
+						</svg>
+						<svg
+							xmlns="http://www.w3.org/2000/svg"
+							class="icono-css3 icon icon-tabler icon-tabler-brand-css3"
+							width="48"
+							height="48"
+							viewBox="0 0 24 24"
+							stroke-width="1.5"
+							stroke="#2c3e50"
+							fill="none"
+							stroke-linecap="round"
+							stroke-linejoin="round"
+						>
+							<path stroke="none" d="M0 0h24v24H0z" fill="none" />
+							<path d="M20 4l-2 14.5l-6 2l-6 -2l-2 -14.5z" />
+							<path d="M8.5 8h7l-4.5 4h4l-.5 3.5l-2.5 .75l-2.5 -.75l-.1 -.5" />
+						</svg>
+						<svg
+							xmlns="http://www.w3.org/2000/svg"
+							class="icono-html5 icon icon-tabler icon-tabler-brand-html5"
+							width="48"
+							height="48"
+							viewBox="0 0 24 24"
+							stroke-width="1.5"
+							stroke="#2c3e50"
+							fill="none"
+							stroke-linecap="round"
+							stroke-linejoin="round"
+						>
+							<path stroke="none" d="M0 0h24v24H0z" fill="none" />
+							<path d="M20 4l-2 14.5l-6 2l-6 -2l-2 -14.5z" />
+							<path d="M15.5 8h-7l.5 4h6l-.5 3.5l-2.5 .75l-2.5 -.75l-.1 -.5" />
+						</svg>
+					</div>
+				</li>
+				<li>
+					<h3 lang="en" translate="no">Excursion</h3>
+					<div class="proyecto-display">
+						<img
+							src="./recursos/img/excursion.png"
+							alt="pagina principal excursion"
+						/>
+						<a href="./proyectos/excursion/index.html">Sitio web</a>
+						<h4>Lenguajes:</h4>
+						<svg
+							xmlns="http://www.w3.org/2000/svg"
+							class="icono-css3 icon icon-tabler icon-tabler-brand-css3"
+							width="48"
+							height="48"
+							viewBox="0 0 24 24"
+							stroke-width="1.5"
+							stroke="#2c3e50"
+							fill="none"
+							stroke-linecap="round"
+							stroke-linejoin="round"
+						>
+							<path stroke="none" d="M0 0h24v24H0z" fill="none" />
+							<path d="M20 4l-2 14.5l-6 2l-6 -2l-2 -14.5z" />
+							<path d="M8.5 8h7l-4.5 4h4l-.5 3.5l-2.5 .75l-2.5 -.75l-.1 -.5" />
+						</svg>
+						<svg
+							xmlns="http://www.w3.org/2000/svg"
+							class="icono-html5 icon icon-tabler icon-tabler-brand-html5"
+							width="48"
+							height="48"
+							viewBox="0 0 24 24"
+							stroke-width="1.5"
+							stroke="#2c3e50"
+							fill="none"
+							stroke-linecap="round"
+							stroke-linejoin="round"
+						>
+							<path stroke="none" d="M0 0h24v24H0z" fill="none" />
+							<path d="M20 4l-2 14.5l-6 2l-6 -2l-2 -14.5z" />
+							<path d="M15.5 8h-7l.5 4h6l-.5 3.5l-2.5 .75l-2.5 -.75l-.1 -.5" />
+						</svg>
+					</div>
+				</li>
+				<li>
+					<h3 lang="en" translate="no">Fotomat</h3>
+					<div class="proyecto-display">
+						<img
+							src="./recursos/img/fotomat.png"
+							alt="pagina principal Fotomat"
+						/>
+						<a href="./proyectos/F1C1_start/index.html">Sitio web</a>
+						<h4>Lenguajes:</h4>
+
+						<svg
+							xmlns="http://www.w3.org/2000/svg"
+							class="icono-css3 icon icon-tabler icon-tabler-brand-css3"
+							width="48"
+							height="48"
+							viewBox="0 0 24 24"
+							stroke-width="1.5"
+							stroke="#2c3e50"
+							fill="none"
+							stroke-linecap="round"
+							stroke-linejoin="round"
+						>
+							<path stroke="none" d="M0 0h24v24H0z" fill="none" />
+							<path d="M20 4l-2 14.5l-6 2l-6 -2l-2 -14.5z" />
+							<path d="M8.5 8h7l-4.5 4h4l-.5 3.5l-2.5 .75l-2.5 -.75l-.1 -.5" />
+						</svg>
+						<svg
+							xmlns="http://www.w3.org/2000/svg"
+							class="icono-html5 icon icon-tabler icon-tabler-brand-html5"
+							width="48"
+							height="48"
+							viewBox="0 0 24 24"
+							stroke-width="1.5"
+							stroke="#2c3e50"
+							fill="none"
+							stroke-linecap="round"
+							stroke-linejoin="round"
+						>
+							<path stroke="none" d="M0 0h24v24H0z" fill="none" />
+							<path d="M20 4l-2 14.5l-6 2l-6 -2l-2 -14.5z" />
+							<path d="M15.5 8h-7l.5 4h6l-.5 3.5l-2.5 .75l-2.5 -.75l-.1 -.5" />
+						</svg>
+					</div>
+				</li>
+				<li>
+					<h3 lang="en" translate="no">Tea Cozy</h3>
+					<div class="proyecto-display">
+						<img
+							src="./recursos/img/tea-cozy.png"
+							alt="pagina principal Tea Cozy"
+						/>
+						<a href="./proyectos/Tea Cozy (Flexbox)/index.html">Sitio web</a>
+						<h4>Lenguajes:</h4>
+						<svg
+							xmlns="http://www.w3.org/2000/svg"
+							class="icono-css3 icon icon-tabler icon-tabler-brand-css3"
+							width="48"
+							height="48"
+							viewBox="0 0 24 24"
+							stroke-width="1.5"
+							stroke="#2c3e50"
+							fill="none"
+							stroke-linecap="round"
+							stroke-linejoin="round"
+						>
+							<path stroke="none" d="M0 0h24v24H0z" fill="none" />
+							<path d="M20 4l-2 14.5l-6 2l-6 -2l-2 -14.5z" />
+							<path d="M8.5 8h7l-4.5 4h4l-.5 3.5l-2.5 .75l-2.5 -.75l-.1 -.5" />
+						</svg>
+						<svg
+							xmlns="http://www.w3.org/2000/svg"
+							class="icono-html5 icon icon-tabler icon-tabler-brand-html5"
+							width="48"
+							height="48"
+							viewBox="0 0 24 24"
+							stroke-width="1.5"
+							stroke="#2c3e50"
+							fill="none"
+							stroke-linecap="round"
+							stroke-linejoin="round"
+						>
+							<path stroke="none" d="M0 0h24v24H0z" fill="none" />
+							<path d="M20 4l-2 14.5l-6 2l-6 -2l-2 -14.5z" />
+							<path d="M15.5 8h-7l.5 4h6l-.5 3.5l-2.5 .75l-2.5 -.75l-.1 -.5" />
+						</svg>
+					</div>
+				</li>
+				<li>
+					<h3 lang="en" translate="no">Style Guide</h3>
+					<div class="proyecto-display">
+						<img
+							src="./recursos/img/style-guide.png"
+							alt="pagina principal Style Guide"
+						/>
+						<a href="https://camilaagudelo.netlify.app/">Sitio web</a>
+						<h4>Lenguajes:</h4>
+
+						<svg
+							xmlns="http://www.w3.org/2000/svg"
+							class="icono-css3 icon icon-tabler icon-tabler-brand-css3"
+							width="48"
+							height="48"
+							viewBox="0 0 24 24"
+							stroke-width="1.5"
+							stroke="#2c3e50"
+							fill="none"
+							stroke-linecap="round"
+							stroke-linejoin="round"
+						>
+							<path stroke="none" d="M0 0h24v24H0z" fill="none" />
+							<path d="M20 4l-2 14.5l-6 2l-6 -2l-2 -14.5z" />
+							<path d="M8.5 8h7l-4.5 4h4l-.5 3.5l-2.5 .75l-2.5 -.75l-.1 -.5" />
+						</svg>
+						<svg
+							xmlns="http://www.w3.org/2000/svg"
+							class="icono-html5 icon icon-tabler icon-tabler-brand-html5"
+							width="48"
+							height="48"
+							viewBox="0 0 24 24"
+							stroke-width="1.5"
+							stroke="#2c3e50"
+							fill="none"
+							stroke-linecap="round"
+							stroke-linejoin="round"
+						>
+							<path stroke="none" d="M0 0h24v24H0z" fill="none" />
+							<path d="M20 4l-2 14.5l-6 2l-6 -2l-2 -14.5z" />
+							<path d="M15.5 8h-7l.5 4h6l-.5 3.5l-2.5 .75l-2.5 -.75l-.1 -.5" />
+						</svg>
+					</div>
+				</li>
+				<li>
+					<h3 lang="en" translate="no">Dasmoto's Art and Craft</h3>
+					<div class="proyecto-display">
+						<img
+							src="./recursos/img/dasmoto.png"
+							alt="pagina principal Dasmoto"
+						/>
+						<a href="https://camilaagudelo.netlify.app/">Sitio web</a>
+						<h4>Lenguajes:</h4>
+
+						<svg
+							xmlns="http://www.w3.org/2000/svg"
+							class="icono-css3 icon icon-tabler icon-tabler-brand-css3"
+							width="48"
+							height="48"
+							viewBox="0 0 24 24"
+							stroke-width="1.5"
+							stroke="#2c3e50"
+							fill="none"
+							stroke-linecap="round"
+							stroke-linejoin="round"
+						>
+							<path stroke="none" d="M0 0h24v24H0z" fill="none" />
+							<path d="M20 4l-2 14.5l-6 2l-6 -2l-2 -14.5z" />
+							<path d="M8.5 8h7l-4.5 4h4l-.5 3.5l-2.5 .75l-2.5 -.75l-.1 -.5" />
+						</svg>
+						<svg
+							xmlns="http://www.w3.org/2000/svg"
+							class="icono-html5 icon icon-tabler icon-tabler-brand-html5"
+							width="48"
+							height="48"
+							viewBox="0 0 24 24"
+							stroke-width="1.5"
+							stroke="#2c3e50"
+							fill="none"
+							stroke-linecap="round"
+							stroke-linejoin="round"
+						>
+							<path stroke="none" d="M0 0h24v24H0z" fill="none" />
+							<path d="M20 4l-2 14.5l-6 2l-6 -2l-2 -14.5z" />
+							<path d="M15.5 8h-7l.5 4h6l-.5 3.5l-2.5 .75l-2.5 -.75l-.1 -.5" />
+						</svg>
+					</div>
+				</li>
+			</ul>
+		</main>
+		<footer>
+			<a href="./contacto.html">Contacto</a>
+			<p>&copy;Jhon Cardona</p>
+		</footer>
+	</body>
 </html>
