--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 	<body>
 		<!-- entrada -->
 		<header>
-			<h1>
-				<span translate="no">Jhon Cardona </span
-				><span id="desarrollador">desarrollador</span>
-			</h1>
+			<a href="./index.html" id="enlace-jhon-cardona">
+				<span translate="no">Jhon Cardona </span>
+				<span id="desarrollador">desarrollador</span>
+			</a>
 		</header>
 		<!-- Proyectos -->
 		<main>
@@ -39,7 +39,7 @@
 							height="48"
 							viewBox="0 0 24 24"
 							stroke-width="1.5"
-							stroke="#2c3e50"
+							stroke="#ffec00"
 							fill="none"
 							stroke-linecap="round"
 							stroke-linejoin="round"
@@ -58,7 +58,7 @@
 							height="48"
 							viewBox="0 0 24 24"
 							stroke-width="1.5"
-							stroke="#2c3e50"
+							stroke="#00abfb"
 							fill="none"
 							stroke-linecap="round"
 							stroke-linejoin="round"
@@ -74,7 +74,7 @@
 							height="48"
 							viewBox="0 0 24 24"
 							stroke-width="1.5"
-							stroke="#2c3e50"
+							stroke="#ff9300"
 							fill="none"
 							stroke-linecap="round"
 							stroke-linejoin="round"
@@ -101,7 +101,7 @@
 							height="48"
 							viewBox="0 0 24 24"
 							stroke-width="1.5"
-							stroke="#2c3e50"
+							stroke="#00abfb"
 							fill="none"
 							stroke-linecap="round"
 							stroke-linejoin="round"
@@ -117,7 +117,7 @@
 							height="48"
 							viewBox="0 0 24 24"
 							stroke-width="1.5"
-							stroke="#2c3e50"
+							stroke="#ff9300"
 							fill="none"
 							stroke-linecap="round"
 							stroke-linejoin="round"
@@ -145,7 +145,7 @@
 							height="48"
 							viewBox="0 0 24 24"
 							stroke-width="1.5"
-							stroke="#2c3e50"
+							stroke="#00abfb"
 							fill="none"
 							stroke-linecap="round"
 							stroke-linejoin="round"
@@ -161,7 +161,7 @@
 							height="48"
 							viewBox="0 0 24 24"
 							stroke-width="1.5"
-							stroke="#2c3e50"
+							stroke="#ff9300"
 							fill="none"
 							stroke-linecap="round"
 							stroke-linejoin="round"
@@ -188,7 +188,7 @@
 							height="48"
 							viewBox="0 0 24 24"
 							stroke-width="1.5"
-							stroke="#2c3e50"
+							stroke="#00abfb"
 							fill="none"
 							stroke-linecap="round"
 							stroke-linejoin="round"
@@ -204,7 +204,7 @@
 							height="48"
 							viewBox="0 0 24 24"
 							stroke-width="1.5"
-							stroke="#2c3e50"
+							stroke="#ff9300"
 							fill="none"
 							stroke-linecap="round"
 							stroke-linejoin="round"
@@ -232,7 +232,7 @@
 							height="48"
 							viewBox="0 0 24 24"
 							stroke-width="1.5"
-							stroke="#2c3e50"
+							stroke="#00abfb"
 							fill="none"
 							stroke-linecap="round"
 							stroke-linejoin="round"
@@ -248,7 +248,7 @@
 							height="48"
 							viewBox="0 0 24 24"
 							stroke-width="1.5"
-							stroke="#2c3e50"
+							stroke="#ff9300"
 							fill="none"
 							stroke-linecap="round"
 							stroke-linejoin="round"
@@ -276,7 +276,7 @@
 							height="48"
 							viewBox="0 0 24 24"
 							stroke-width="1.5"
-							stroke="#2c3e50"
+							stroke="#00abfb"
 							fill="none"
 							stroke-linecap="round"
 							stroke-linejoin="round"
@@ -292,7 +292,7 @@
 							height="48"
 							viewBox="0 0 24 24"
 							stroke-width="1.5"
-							stroke="#2c3e50"
+							stroke="#ff9300"
 							fill="none"
 							stroke-linecap="round"
 							stroke-linejoin="round"
@@ -306,6 +306,7 @@
 			</ul>
 		</main>
 		<footer>
+			<a href="./index.html">Inicio</a>
 			<a href="./contacto.html">Contacto</a>
 			<p>&copy;Jhon Cardona</p>
 		</footer>
