--- a/contacto.html
+++ b/contacto.html
@@ -5,6 +5,13 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Contacto Jhon Cardona</title>
+        <meta name="description" content="Página de contacto Jhon Cardona" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Asap:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+			rel="stylesheet"
+		/>
+        <link rel="preload" href="./recursos/css/style.css" as="style" />
 		<link rel="stylesheet" href="./recursos/css/style.css" />
 		<script src="./recursos/js/scripts.js" defer></script>
 	</head>
@@ -12,13 +19,13 @@
 		<header>
 			<h1>
 				<a href="./index.html" id="enlace-jhon-cardona">
-					<span translate="no">Jhon Cardona </span>
+					<span translate="no" id="jhon-cardona">Jhon Cardona </span>
 					<span id="desarrollador">desarrollador</span>
 				</a>
 			</h1>
 		</header>
 		<main>
-			<h2>Contacto:</h2>
+			<h2 id="contacto-titulo">Contacto:</h2>
 			<address>
 				<div class="elemento-contacto">
 					<svg
@@ -41,7 +48,26 @@
 						<path d="M6 15h1" />
 					</svg>
 					<h3>Correo electrónico:</h3>
-					<a href="mailto:jhone2001@gmail.com">jhone2001@gmail.com</a>
+					<a href="mailto:jhone2001@gmail.com">jhone2001@gmail.com</a
+					><svg
+						xmlns="http://www.w3.org/2000/svg"
+						class="icon icon-tabler icon-tabler-external-link"
+						width="16"
+						height="16"
+						viewBox="0 0 24 24"
+						stroke-width="1.5"
+						stroke="#000000"
+						fill="none"
+						stroke-linecap="round"
+						stroke-linejoin="round"
+					>
+						<path stroke="none" d="M0 0h24v24H0z" fill="none" />
+						<path
+							d="M11 7h-5a2 2 0 0 0 -2 2v9a2 2 0 0 0 2 2h9a2 2 0 0 0 2 -2v-5"
+						/>
+						<line x1="10" y1="14" x2="20" y2="4" />
+						<polyline points="15 4 20 4 20 9" />
+					</svg>
 				</div>
 				<div class="elemento-contacto">
 					<svg
@@ -63,7 +89,26 @@
 						/>
 					</svg>
 					<h3>WhatsApp:</h3>
-					<a href="https://wa.me/34744407597">744 40 75 97</a>
+					<a href="https://wa.me/34744407597">744 40 75 97</a
+					><svg
+						xmlns="http://www.w3.org/2000/svg"
+						class="icon icon-tabler icon-tabler-external-link"
+						width="16"
+						height="16"
+						viewBox="0 0 24 24"
+						stroke-width="1.5"
+						stroke="#000000"
+						fill="none"
+						stroke-linecap="round"
+						stroke-linejoin="round"
+					>
+						<path stroke="none" d="M0 0h24v24H0z" fill="none" />
+						<path
+							d="M11 7h-5a2 2 0 0 0 -2 2v9a2 2 0 0 0 2 2h9a2 2 0 0 0 2 -2v-5"
+						/>
+						<line x1="10" y1="14" x2="20" y2="4" />
+						<polyline points="15 4 20 4 20 9" />
+					</svg>
 				</div>
 				<div class="elemento-contacto">
 					<svg
@@ -89,8 +134,12 @@
 			</address>
 		</main>
 		<footer>
-			<a href="./index.html">Inicio</a>
-			<a href="./contacto.html">Contacto</a>
+			<nav>
+				<ul id="navegacion-footer">
+					<li><a href="./index.html">Inicio</a></li>
+					<li><a href="./contacto.html">Contacto</a></li>
+				</ul>
+			</nav>
 			<p>&copy;Jhon Cardona</p>
 		</footer>
 	</body>
