enlaces de sitios web arreglados

--- a/index.html
+++ b/index.html
@@ -338,7 +338,9 @@
 							alt="pagina principal Style Guide"
 						/>
 						<div class="texto-proyectos">
-							<a href="https://camilaagudelo.netlify.app/">Sitio web</a
+							<a
+								href="./proyectos/website-design-system-starting(Enlaces grandes)/index.html"
+								>Sitio web</a
 							><svg
 								xmlns="http://www.w3.org/2000/svg"
 								class="icon icon-tabler icon-tabler-external-link"
@@ -406,7 +408,8 @@
 							alt="pagina principal Dasmoto"
 						/>
 						<div class="texto-proyectos">
-							<a href="https://camilaagudelo.netlify.app/">Sitio web</a
+							<a href="./proyectos/Dasmoto's Art and Craft/index.html"
+								>Sitio web</a
 							><svg
 								xmlns="http://www.w3.org/2000/svg"
 								class="icon icon-tabler icon-tabler-external-link"
