entrada en movil arreglada, cambio en immagenes en movil comenzado

--- a/contacto.html
+++ b/contacto.html
@@ -5,13 +5,13 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Contacto Jhon Cardona</title>
-        <meta name="description" content="Página de contacto Jhon Cardona" />
+		<meta name="description" content="Página de contacto Jhon Cardona" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" />
 		<link
 			href="https://fonts.googleapis.com/css2?family=Asap:ital,wght@0,400;0,700;1,400;1,700&display=swap"
 			rel="stylesheet"
 		/>
-        <link rel="preload" href="./recursos/css/style.css" as="style" />
+		<link rel="preload" href="./recursos/css/style.css" as="style" />
 		<link rel="stylesheet" href="./recursos/css/style.css" />
 		<script src="./recursos/js/scripts.js" defer></script>
 	</head>
@@ -28,108 +28,118 @@
 			<h2 id="contacto-titulo">Contacto:</h2>
 			<address>
 				<div class="elemento-contacto">
-					<svg
-						xmlns="http://www.w3.org/2000/svg"
-						class="icon icon-tabler icon-tabler-mailbox"
-						width="48"
-						height="48"
-						viewBox="0 0 24 24"
-						stroke-width="1.5"
-						stroke="#009988"
-						fill="none"
-						stroke-linecap="round"
-						stroke-linejoin="round"
-					>
-						<path stroke="none" d="M0 0h24v24H0z" fill="none" />
-						<path
-							d="M10 21v-6.5a3.5 3.5 0 0 0 -7 0v6.5h18v-6a4 4 0 0 0 -4 -4h-10.5"
-						/>
-						<path d="M12 11v-8h4l2 2l-2 2h-4" />
-						<path d="M6 15h1" />
-					</svg>
-					<h3>Correo electrónico:</h3>
-					<a href="mailto:jhone2001@gmail.com">jhone2001@gmail.com</a
-					><svg
-						xmlns="http://www.w3.org/2000/svg"
-						class="icon icon-tabler icon-tabler-external-link"
-						width="16"
-						height="16"
-						viewBox="0 0 24 24"
-						stroke-width="1.5"
-						stroke="#000000"
-						fill="none"
-						stroke-linecap="round"
-						stroke-linejoin="round"
-					>
-						<path stroke="none" d="M0 0h24v24H0z" fill="none" />
-						<path
-							d="M11 7h-5a2 2 0 0 0 -2 2v9a2 2 0 0 0 2 2h9a2 2 0 0 0 2 -2v-5"
-						/>
-						<line x1="10" y1="14" x2="20" y2="4" />
-						<polyline points="15 4 20 4 20 9" />
-					</svg>
+					<div class="icono-texto">
+						<svg
+							xmlns="http://www.w3.org/2000/svg"
+							class="icon icon-tabler icon-tabler-mailbox"
+							width="48"
+							height="48"
+							viewBox="0 0 24 24"
+							stroke-width="1.5"
+							stroke="#009988"
+							fill="none"
+							stroke-linecap="round"
+							stroke-linejoin="round"
+						>
+							<path stroke="none" d="M0 0h24v24H0z" fill="none" />
+							<path
+								d="M10 21v-6.5a3.5 3.5 0 0 0 -7 0v6.5h18v-6a4 4 0 0 0 -4 -4h-10.5"
+							/>
+							<path d="M12 11v-8h4l2 2l-2 2h-4" />
+							<path d="M6 15h1" />
+						</svg>
+						<h3>Correo electrónico:</h3>
+					</div>
+					<div>
+						<a href="mailto:jhone2001@gmail.com">jhone2001@gmail.com</a
+						><svg
+							xmlns="http://www.w3.org/2000/svg"
+							class="icon icon-tabler icon-tabler-external-link"
+							width="16"
+							height="16"
+							viewBox="0 0 24 24"
+							stroke-width="1.5"
+							stroke="#000000"
+							fill="none"
+							stroke-linecap="round"
+							stroke-linejoin="round"
+						>
+							<path stroke="none" d="M0 0h24v24H0z" fill="none" />
+							<path
+								d="M11 7h-5a2 2 0 0 0 -2 2v9a2 2 0 0 0 2 2h9a2 2 0 0 0 2 -2v-5"
+							/>
+							<line x1="10" y1="14" x2="20" y2="4" />
+							<polyline points="15 4 20 4 20 9" />
+						</svg>
+					</div>
 				</div>
 				<div class="elemento-contacto">
-					<svg
-						xmlns="http://www.w3.org/2000/svg"
-						class="icon icon-tabler icon-tabler-brand-whatsapp"
-						width="48"
-						height="48"
-						viewBox="0 0 24 24"
-						stroke-width="1.5"
-						stroke="#00b341"
-						fill="none"
-						stroke-linecap="round"
-						stroke-linejoin="round"
-					>
-						<path stroke="none" d="M0 0h24v24H0z" fill="none" />
-						<path d="M3 21l1.65 -3.8a9 9 0 1 1 3.4 2.9l-5.05 .9" />
-						<path
-							d="M9 10a0.5 .5 0 0 0 1 0v-1a0.5 .5 0 0 0 -1 0v1a5 5 0 0 0 5 5h1a0.5 .5 0 0 0 0 -1h-1a0.5 .5 0 0 0 0 1"
-						/>
-					</svg>
-					<h3>WhatsApp:</h3>
-					<a href="https://wa.me/34744407597">744 40 75 97</a
-					><svg
-						xmlns="http://www.w3.org/2000/svg"
-						class="icon icon-tabler icon-tabler-external-link"
-						width="16"
-						height="16"
-						viewBox="0 0 24 24"
-						stroke-width="1.5"
-						stroke="#000000"
-						fill="none"
-						stroke-linecap="round"
-						stroke-linejoin="round"
-					>
-						<path stroke="none" d="M0 0h24v24H0z" fill="none" />
-						<path
-							d="M11 7h-5a2 2 0 0 0 -2 2v9a2 2 0 0 0 2 2h9a2 2 0 0 0 2 -2v-5"
-						/>
-						<line x1="10" y1="14" x2="20" y2="4" />
-						<polyline points="15 4 20 4 20 9" />
-					</svg>
+					<div class="icono-texto">
+						<svg
+							xmlns="http://www.w3.org/2000/svg"
+							class="icon icon-tabler icon-tabler-brand-whatsapp"
+							width="48"
+							height="48"
+							viewBox="0 0 24 24"
+							stroke-width="1.5"
+							stroke="#00b341"
+							fill="none"
+							stroke-linecap="round"
+							stroke-linejoin="round"
+						>
+							<path stroke="none" d="M0 0h24v24H0z" fill="none" />
+							<path d="M3 21l1.65 -3.8a9 9 0 1 1 3.4 2.9l-5.05 .9" />
+							<path
+								d="M9 10a0.5 .5 0 0 0 1 0v-1a0.5 .5 0 0 0 -1 0v1a5 5 0 0 0 5 5h1a0.5 .5 0 0 0 0 -1h-1a0.5 .5 0 0 0 0 1"
+							/>
+						</svg>
+						<h3>WhatsApp:</h3>
+					</div>
+					<div>
+						<a href="https://wa.me/34744407597">744 40 75 97</a
+						><svg
+							xmlns="http://www.w3.org/2000/svg"
+							class="icon icon-tabler icon-tabler-external-link"
+							width="16"
+							height="16"
+							viewBox="0 0 24 24"
+							stroke-width="1.5"
+							stroke="#000000"
+							fill="none"
+							stroke-linecap="round"
+							stroke-linejoin="round"
+						>
+							<path stroke="none" d="M0 0h24v24H0z" fill="none" />
+							<path
+								d="M11 7h-5a2 2 0 0 0 -2 2v9a2 2 0 0 0 2 2h9a2 2 0 0 0 2 -2v-5"
+							/>
+							<line x1="10" y1="14" x2="20" y2="4" />
+							<polyline points="15 4 20 4 20 9" />
+						</svg>
+					</div>
 				</div>
 				<div class="elemento-contacto">
-					<svg
-						xmlns="http://www.w3.org/2000/svg"
-						class="icon icon-tabler icon-tabler-map-pin"
-						width="48"
-						height="48"
-						viewBox="0 0 24 24"
-						stroke-width="1.5"
-						stroke="#ff2825"
-						fill="none"
-						stroke-linecap="round"
-						stroke-linejoin="round"
-					>
-						<path stroke="none" d="M0 0h24v24H0z" fill="none" />
-						<circle cx="12" cy="11" r="3" />
-						<path
-							d="M17.657 16.657l-4.243 4.243a2 2 0 0 1 -2.827 0l-4.244 -4.243a8 8 0 1 1 11.314 0z"
-						/>
-					</svg>
-					<p>Valladolid, España</p>
+					<div class="icono-texto">
+						<svg
+							xmlns="http://www.w3.org/2000/svg"
+							class="icon icon-tabler icon-tabler-map-pin"
+							width="48"
+							height="48"
+							viewBox="0 0 24 24"
+							stroke-width="1.5"
+							stroke="#ff2825"
+							fill="none"
+							stroke-linecap="round"
+							stroke-linejoin="round"
+						>
+							<path stroke="none" d="M0 0h24v24H0z" fill="none" />
+							<circle cx="12" cy="11" r="3" />
+							<path
+								d="M17.657 16.657l-4.243 4.243a2 2 0 0 1 -2.827 0l-4.244 -4.243a8 8 0 1 1 11.314 0z"
+							/>
+						</svg>
+						<p>Valladolid, España</p>
+					</div>
 				</div>
 			</address>
 		</main>
