--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 						<img
 							src="./recursos/img/camila-agudelo-sitio-web.png"
 							alt="pagina principal Camila Agudelo"
+							id="camila-img"
 						/>
 						<div class="texto-proyectos">
 							<a href="https://camilaagudelo.netlify.app/">Sitio web</a>
@@ -132,6 +133,7 @@
 						<img
 							src="./recursos/img/excursion.png"
 							alt="pagina principal excursion"
+							id="excursion-img"
 						/>
 						<div class="texto-proyectos">
 							<a href="./proyectos/excursion/index.html">Sitio web</a
@@ -200,6 +202,7 @@
 						<img
 							src="./recursos/img/fotomat.png"
 							alt="pagina principal Fotomat"
+							id="fotomat-img"
 						/>
 						<div class="texto-proyectos">
 							<a href="./proyectos/F1C1_start/index.html">Sitio web</a
@@ -268,6 +271,7 @@
 						<img
 							src="./recursos/img/tea-cozy.png"
 							alt="pagina principal Tea Cozy"
+							id="tea-img"
 						/>
 						<div class="texto-proyectos">
 							<a href="./proyectos/Tea Cozy (Flexbox)/index.html">Sitio web</a
@@ -336,6 +340,7 @@
 						<img
 							src="./recursos/img/style-guide.png"
 							alt="pagina principal Style Guide"
+							id="style-img"
 						/>
 						<div class="texto-proyectos">
 							<a
@@ -406,6 +411,7 @@
 						<img
 							src="./recursos/img/dasmoto.png"
 							alt="pagina principal Dasmoto"
+							id="art-img"
 						/>
 						<div class="texto-proyectos">
 							<a href="./proyectos/Dasmoto's Art and Craft/index.html"
