--- a/contacto.html
+++ b/contacto.html
@@ -8,7 +8,7 @@
 		<meta name="description" content="Página de contacto Jhon Cardona" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" />
 		<link
-			href="https://fonts.googleapis.com/css2?family=Asap:ital,wght@0,400;0,700;1,400;1,700&display=swap"
+			href="https://fonts.googleapis.com/css2?family=Asap:ital,wght@0,400;0,700;1,400&family=Roboto:ital,wght@0,400;0,700;1,400&display=swap"
 			rel="stylesheet"
 		/>
 		<link rel="preload" href="./recursos/css/style.css" as="style" />
