diseño cambiado por blanco y negro

--- a/index.html
+++ b/index.html
@@ -27,8 +27,12 @@
 			></video>
 			<h1>
 				<a href="./index.html" id="enlace-jhon-cardona">
-					<span translate="no" id="jhon-cardona">Jhon Cardona </span>
-					<span id="desarrollador">desarrollador</span>
+					<span translate="no" id="jhon-cardona"
+						><span id="jhon">Jhon</span><span id="cardona">Cardona</span>
+					</span>
+					<span id="desarrollador-externo"
+						><span id="desarrollador">desarrollador</span></span
+					>
 				</a>
 			</h1>
 		</header>
@@ -480,8 +484,8 @@
 		<footer>
 			<nav>
 				<ul id="navegacion-footer">
-					<li><a href="./index.html">Inicio</a></li>
-					<li><a href="./contacto.html">Contacto</a></li>
+					<li><a href="./index.html" class="enlace-nav">Inicio</a></li>
+					<li><a href="./contacto.html" class="enlace-nav">Contacto</a></li>
 				</ul>
 			</nav>
 			<p>&copy;Jhon Cardona</p>
