--- a/contacto.html
+++ b/contacto.html
@@ -18,9 +18,10 @@
 	<body>
 		<header>
 			<h1>
-				<a href="./index.html" id="enlace-jhon-cardona">
-					<span translate="no" id="jhon-cardona">Jhon Cardona </span>
-					<span id="desarrollador">desarrollador</span>
+				<a href="./index.html" id="enlace-jhon-cardona-secundario">
+					<span translate="no" id="jhon-cardona"
+						><span id="jhon">Jhon</span><span id="cardona">Cardona</span>
+					</span>
 				</a>
 			</h1>
 		</header>
@@ -146,8 +147,8 @@
 		<footer>
 			<nav>
 				<ul id="navegacion-footer">
-					<li><a href="./index.html">Inicio</a></li>
-					<li><a href="./contacto.html">Contacto</a></li>
+					<li><a href="./index.html" class="enlace-nav">Inicio</a></li>
+					<li><a href="./contacto.html" class="enlace-nav">Contacto</a></li>
 				</ul>
 			</nav>
 			<p>&copy;Jhon Cardona</p>
