adaptado para computadores

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		<!-- Proyectos -->
 		<main>
 			<h2 id="proyectos-titulo">Proyectos:</h2>
-			<ul>
+			<ul class="grid-pagina-principal">
 				<li>
 					<h3>Portafolio Camila Agudelo</h3>
 					<div class="proyecto-display">
